# cavl

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cavl.h  test.cpp
.github/workflows/: main.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_cpp14  test_cpp20
c/: .clang-format  .clang-tidy  cavl.h  cavl2.h  test.cpp
c++/: .clang-tidy  cavl.hpp  test.cpp
test/: test.cpp
